DTSCCI-1567: dismissed deadline